--- a/env.yaml
+++ b/env.yaml
@@ -6,9 +6,12 @@ dependencies:
   - python=3.10
   - pandas=1.5.3
   - jupyterlab=3.6.1
+  - scikit-learn=1.3.0
   - pip: 
     - torch==2.0.1
     - transformers==4.32.1
     - datasets==2.14.4
+    - evaluate==0.4.0
     - sagemaker==2.182.0
+    - accelerate>=0.20.1
  
